adding support for JBossAS 510
git-svn-id: https://anonsvn.jboss.org/repos/jbossws/stack/native/trunk@8866 50344849-fb0f-0410-a53f-a94597aac05c