@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  
+
   <name>JBoss Web Services - Stack Native Testsuite</name>
   <artifactId>jbossws-native-testsuite</artifactId>
   <packaging>pom</packaging>
-  
+
   <!-- Parent -->
   <parent>
     <groupId>org.jboss.ws.native</groupId>
@@ -13,7 +13,7 @@
     <version>3.0.5-SNAPSHOT</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
-  
+
   <!-- Properties -->
   <properties>
     <surefire.security.args>-Djava.security.manager -Djava.security.policy=src/test/etc/tst.policy</surefire.security.args>
@@ -27,13 +27,13 @@
     <endpoint.servlet>org.jboss.wsf.stack.jbws.EndpointServlet</endpoint.servlet>
     <jboss.javaee.version>5.0.0.GA</jboss.javaee.version>
   </properties>
-  
+
   <!-- Modules -->
   <modules>
     <module>native-tests</module>
     <module>framework-tests</module>
   </modules>
-  
+
   <!-- Dependencies -->
   <dependencies>
     <dependency>
@@ -93,7 +93,7 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-  
+
   <!-- Build -->
   <build>
     <testResources>
@@ -172,7 +172,7 @@
             <property>
               <name>jboss.home</name>
               <value>${jboss.home}</value>
-            </property>            
+            </property>
             <property>
               <name>jbossws.integration.target</name>
               <value>${jbossws.integration.target}</value>
@@ -226,13 +226,13 @@
       </plugin>
     </plugins>
   </build>
-  
+
   <!-- Profiles -->
   <profiles>
-    
-    <!-- 
+
+    <!--
     Name:  debug
-    Descr: Enable remote debuging for tests 
+    Descr: Enable remote debuging for tests
     -->
     <profile>
       <id>debug</id>
@@ -256,8 +256,8 @@
         <surefire.jvm.args>${surefire.security.args} ${surefire.gc.args}</surefire.jvm.args>
       </properties>
     </profile>
-    
-    <!-- 
+
+    <!--
     Name:  hudson
     Descr: Ignore test failures on hudson
     -->
@@ -275,9 +275,9 @@
       </build>
     </profile>
 
-    <!-- 
+    <!--
     Name:  jboss422
-    Descr: JBoss-4.2.2 specific options  
+    Descr: JBoss-4.2.2 specific options
     -->
     <profile>
       <id>jboss422</id>
@@ -314,10 +314,10 @@
         </plugins>
       </build>
     </profile>
-    
-    <!-- 
+
+    <!--
     Name:  jboss423
-    Descr: JBoss-4.2.3 specific options  
+    Descr: JBoss-4.2.3 specific options
     -->
     <profile>
       <id>jboss423</id>
@@ -354,10 +354,10 @@
         </plugins>
       </build>
     </profile>
-    
-    <!-- 
+
+    <!--
     Name:  jboss424
-    Descr: JBoss-4.2.4 specific options  
+    Descr: JBoss-4.2.4 specific options
     -->
     <profile>
       <id>jboss424</id>
@@ -394,10 +394,10 @@
         </plugins>
       </build>
     </profile>
-    
-    <!-- 
+
+    <!--
     Name:  jboss500
-    Descr: JBoss-5.0.0 specific options  
+    Descr: JBoss-5.0.0 specific options
     -->
     <profile>
       <id>jboss500</id>
@@ -468,10 +468,10 @@
         </plugins>
       </build>
     </profile>
-    
-    <!-- 
+
+    <!--
     Name:  jboss501
-    Descr: JBoss-5.0.1 specific options  
+    Descr: JBoss-5.0.1 specific options
     -->
     <profile>
       <id>jboss501</id>
@@ -542,13 +542,87 @@
         </plugins>
       </build>
     </profile>
-    
-    <!-- 
+
+    <!--
+    Name:  jboss510
+    Descr: JBoss-5.1.0 specific options
+    -->
+    <profile>
+      <id>jboss510</id>
+      <properties>
+        <jboss.version>5.1.0-SNAPSHOT</jboss.version>
+        <jbossws.integration.target>jboss510</jbossws.integration.target>
+      </properties>
+      <dependencies>
+        <!-- [JBWS-2263] -->
+        <!-- START -->
+        <dependency>
+          <groupId>org.jboss.ws</groupId>
+          <artifactId>jbossws-jboss510x</artifactId>
+        </dependency>
+        <!--dependency>
+          <groupId>org.jboss.jbossas</groupId>
+          <artifactId>jboss-as-webservices</artifactId>
+          <version>${jboss.version}</version>
+        </dependency-->
+        <!-- END -->
+        <dependency>
+          <groupId>org.hibernate</groupId>
+          <artifactId>hibernate</artifactId>
+          <version>${hibernate.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.jbossas</groupId>
+          <artifactId>jboss-as-ejb3</artifactId>
+          <version>${jboss.version}</version>
+          <exclusions>
+            <exclusion>
+              <groupId>org.jboss.security</groupId>
+              <artifactId>jbosssx</artifactId>
+            </exclusion>
+          </exclusions>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.jbossas</groupId>
+          <artifactId>jboss-as-security</artifactId>
+          <version>${jboss.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.javaee</groupId>
+          <artifactId>jboss-javaee</artifactId>
+          <version>${jboss.javaee.version}</version>
+        </dependency>
+      </dependencies>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+              <!-- http://jira.codehaus.org/browse/MCOMPILER-72 -->
+              <testExcludeFile>../test-excludes-jboss510.txt</testExcludeFile>
+            </configuration>
+          </plugin>
+          <plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <argLine>${surefire.jvm.args} -Djava.endorsed.dirs=${jboss510.home}/lib/endorsed</argLine>
+              <!-- TODO: replace with maven dependencies -->
+              <additionalClasspathElements>
+                <additionalClasspathElement>${jboss.home}/client/jbossall-client.jar</additionalClasspathElement>
+                <additionalClasspathElement>${jboss.home}/common/lib/jboss-ejb3-core.jar</additionalClasspathElement>
+              </additionalClasspathElements>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
+    <!--
     Name:  no-jboss-bind-address
     Descr: Set the default jboss.bind.address
-    
+
     command line cannot overwrite pom properties
-    http://jira.codehaus.org/browse/MNG-3546   
+    http://jira.codehaus.org/browse/MNG-3546
     -->
     <profile>
       <id>no-jboss-bind-address</id>
@@ -561,13 +635,13 @@
         <jboss.bind.address>localhost</jboss.bind.address>
       </properties>
     </profile>
-  
-  <!-- 
+
+  <!--
     Name:  no-jboss-server-instance
     Descr: Set the default jboss.server.instance
-    
+
     command line cannot overwrite pom properties
-    http://jira.codehaus.org/browse/MNG-3546   
+    http://jira.codehaus.org/browse/MNG-3546
     -->
     <profile>
       <id>no-jboss-server-instance</id>
@@ -581,5 +655,5 @@
       </properties>
     </profile>
   </profiles>
-  
+
 </project>
